[Sample Data 로딩] 방식 변경, Car 도메인에 RefCarInfo refCarInfo으로 변경